# mevzuat-mcp

./: LICENSE  README.md  main.py  mevzuat_client.py  mevzuat_mcp_server.py  mevzuat_models.py  pyproject.toml  requirements.txt  setup.sh
.well-known/: ai-plugin.json
