[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mevzuat-mcp"
version = "0.1.0"
description = "MCP Server for Turkish Legislation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.6.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "markitdown>=0.1.1",
]

[project.scripts]
mevzuat-mcp = "mevzuat_mcp_server:main"

[tool.setuptools]
py-modules = ["mevzuat_mcp_server", "mevzuat_client", "mevzuat_models"]